@@ -48,6 +48,7 @@ private:
 	BaseGui * main_window;
 
     QStringList files_to_play;
+    QString subtitle_file;
     QString actions_list; //!< Actions to be run on startup
 	QString gui_to_use;
 };
